# portable_ovscode

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/portable_ovscode/: __init__.py  cli.py  proxy.py
tests/: test_port.py
